Closed
Bug 335543
Opened 20 years ago
Closed 18 years ago
Don't use PangoWeight values outside the permissible range (100..900)
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9alpha6
People
(Reporter: dsantani, Assigned: dsantani)
References
()
Details
Attachments
(1 file)
|
1.54 KB,
patch
|
vlad
:
review+
vlad
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.8.0.1) Gecko/20060313 Fedora/1.5.0.1-9 Firefox/1.5.0.1 pango-text
Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.8.0.1) Gecko/20060313 Fedora/1.5.0.1-9 Firefox/1.5.0.1 pango-text
The function "PangoWeight CalculateWeight (PRUint16 aWeight) " in nsFontMetricsPango.cpp is returning *999* as one of the return values, but as per the *PangoWeight enum* defined in Pango API (reference link below), the maximum permissible return value is *900*.
Link for Pango API (PangoWeight enum)
http://pango.org/manual/pango-Fonts.html#id2926866
Reproducible: Always
Comment 1•20 years ago
|
||
I blame blizzard. :)
(If you intend to fix this bug, please feel free to assign it to yourself!)
Comment 2•20 years ago
|
||
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 3•20 years ago
|
||
I can fix this issue. Please assign this bug to me.
Updated•20 years ago
|
Assignee: nobody → dsantani
Comment 4•18 years ago
|
||
gfx/src/gtk/nsFontMetricsPango.cpp have been removed on trunk, but the code
in the function ThebesStyleToPangoWeight() in gfx/thebes/src/gfxPangoFonts.cpp
seems to be identical so I'm guessing this is still a problem on trunk.
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/gfx/thebes/src/gfxPangoFonts.cpp&rev=1.84&root=/cvsroot&mark=358#311
Comment 5•18 years ago
|
||
Like so?
Attachment #268666 -
Flags: superreview?(vladimir)
Attachment #268666 -
Flags: review?(vladimir)
Attachment #268666 -
Flags: superreview?(vladimir)
Attachment #268666 -
Flags: superreview+
Attachment #268666 -
Flags: review?(vladimir)
Attachment #268666 -
Flags: review+
Comment 6•18 years ago
|
||
Checked in to trunk at 2007-06-18 20:08 PDT.
-> FIXED
Severity: normal → minor
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Summary: Code Error in nsFontMetricsPango.cpp → Don't use PangoWeight values outside the permissible range (100..900)
Target Milestone: --- → mozilla1.9alpha6
Updated•18 years ago
|
Flags: in-testsuite-
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•