Don't return values outside the range for PangoWeight (100..900). b=335543 r+sr=vladimir